--- a/src/index.css
+++ b/src/index.css
@@ -110,12 +110,19 @@ button:focus-visible {
   color: #1a1a1a;
 }
 
+.queue-item__content {
+  position: relative;
+  z-index: 1;
+  display: flex;
+}
+
 .progress-bar {
   --duration: 5s;
-  width: 200px;
-  height: 20px;
-  background-color: #ddd;
-  position: relative;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #646cff;
   overflow: hidden;
 }
 
@@ -136,10 +143,10 @@ button:focus-visible {
 
 @keyframes fill-progress {
   0% {
-    width: 0;
+    width: 100%;
   }
 
   100% {
-    width: 100%;
+    width: 0;
   }
 }
